--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "font-awesome": "^4.7.0",
     "sequelize": "^6.25.5",
+    "smb2": "^0.2.11",
     "tedious": "^15.1.1"
   }
 }
