--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.5.1",
+    "nodemon": "^2.0.20",
     "sequelize": "^6.25.5",
     "smb2": "^0.2.11",
     "tedious": "^15.1.1"
