--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "bootstrap": "^5.2.2",
     "cookie-parser": "^1.4.6",
@@ -19,6 +20,7 @@
     "express": "^4.18.2",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.8.0",
     "nodemon": "^2.0.20",
     "sequelize": "^6.25.5",
     "smb2": "^0.2.11",
